WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149839
[WinCairo] GStreamer compile errors.
https://bugs.webkit.org/show_bug.cgi?id=149839
Summary
[WinCairo] GStreamer compile errors.
peavo
Reported
2015-10-06 05:09:31 PDT
There are currently a few compile errors when compiling WinCairo with GStreamer: InbandTextTrackPrivateGStreamer.cpp(86): error C2668: 'WTF::GThreadSafeMainLoopSource::schedule': ambiguous call to overloaded function
Attachments
Patch
(12.04 KB, patch)
2015-10-06 05:59 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
Patch
(11.83 KB, patch)
2015-10-06 10:48 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2015-10-06 05:59:11 PDT
Created
attachment 262511
[details]
Patch
Zan Dobersek
Comment 2
2015-10-06 08:56:32 PDT
Comment on
attachment 262511
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=262511&action=review
> Source/WebCore/platform/graphics/gstreamer/InbandTextTrackPrivateGStreamer.cpp:89 > - [protector] { protector->notifyTrackOfSample(); }); > + static_cast<std::function<void()>>( > + [protector] { > + protector->notifyTrackOfSample(); > + }));
Just std::function<void ()>([protector] { ... }) should work, with no casts.
peavo
Comment 3
2015-10-06 10:48:32 PDT
Created
attachment 262523
[details]
Patch
peavo
Comment 4
2015-10-06 10:49:42 PDT
(In reply to
comment #2
)
> Comment on
attachment 262511
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=262511&action=review
> > > Source/WebCore/platform/graphics/gstreamer/InbandTextTrackPrivateGStreamer.cpp:89 > > - [protector] { protector->notifyTrackOfSample(); }); > > + static_cast<std::function<void()>>( > > + [protector] { > > + protector->notifyTrackOfSample(); > > + })); > > Just > > std::function<void ()>([protector] { ... }) > > should work, with no casts.
Thanks, that's much better than my casts :)
peavo
Comment 5
2015-10-06 13:29:39 PDT
Thanks for reviewing, Alex!
WebKit Commit Bot
Comment 6
2015-10-06 13:45:38 PDT
Comment on
attachment 262523
[details]
Patch Clearing flags on attachment: 262523 Committed
r190643
: <
http://trac.webkit.org/changeset/190643
>
WebKit Commit Bot
Comment 7
2015-10-06 13:45:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug