Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp
@@ -219,7 +219,10 @@ static GstFlowReturn webkitVideoSinkRender(GstBaseSink* baseSink, GstBuffer* buf
     // See: https://bugzilla.gnome.org/show_bug.cgi?id=610830.
     GRefPtr<WebKitVideoSink> protector(sink);
     priv->timeoutSource.schedule("[WebKit] webkitVideoSinkTimeoutCallback",
-        [protector] { webkitVideoSinkTimeoutCallback(protector.get()); }, G_PRIORITY_DEFAULT);
+        std::function<void()>(
+            [protector] {
+                webkitVideoSinkTimeoutCallback(protector.get());
+            }));
 
     g_cond_wait(&priv->dataCondition, &priv->sampleMutex);
     return GST_FLOW_OK;
